<resources>
    <string name="app_name">My Wechat</string>
    <string-array name="spinner">
        <item></item>
        <item>发起群聊</item>
        <item>添加朋友</item>
        <item>扫一扫</item>
        <item>收付款</item>
    </string-array>

    <string name="title">微信</string>
    <string name="group_chat">发起群聊</string>
    <string name="add_friend">添加朋友</string>
    <string name="scan">扫一扫</string>
    <string name="pay">收付款</string>
    <string name="help">帮助与反馈</string>
    <string name="login_text">微信号/QQ/邮箱登录</string>
    <string name="reg_text">注册</string>
    <string name="login">登录</string>
    <string name="user_name">账号</string>
    <string name="user_passwd">密码</string>
    <string name="reg_name">昵称</string>
    <string name="reg_id">账号</string>
    <string name="register">没有账号？立即注册</string>
    <string name="reg_passwd">密码</string>
    <string name="user_name_hint">请填写微信号/QQ号/邮箱</string>
    <string name="user_passwd_hint">请填写密码</string>
    <string name="phone_login">用手机号登录</string>
    <string name="bottom_login1">找回密码</string>
    <string name="bottom_login2">紧急冻结</string>
    <string name="bottom_login3">微信安全中心</string>
    <string name="bottom1">微信</string>
    <string name="bottom2">通讯录</string>
    <string name="bottom3">发现</string>
    <string name="bottom4">我</string>
    <string name="login_name">刘嘉祺</string>
    <string name="wechat_num">微信号 : Forest_Liu1998</string>
    <string name="update_time">6小时前</string>
    <string name="paytitle">支付</string>
    <string name="title_activity_update">UpdateActivity</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>


</resources>
