<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/title"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!--返回按钮-->
    <ImageView
        android:id="@+id/close"
        android:layout_marginTop="45dp"
        android:layout_marginLeft="20dp"
        android:src="@mipmap/close"
        android:layout_width="17dp"
        android:layout_height="17dp" />
    <!--标题-->
    <TextView
        android:textSize="25sp"
        android:text="@string/login_text"
        android:layout_marginTop="45dp"
        android:layout_marginLeft="30dp"
        android:textColor="@color/loginText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <!--账号输入-->
    <LinearLayout
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
       <TextView
           android:textColor="@color/loginText"
           android:layout_marginLeft="30dp"
           android:text="@string/user_name"
           android:textSize="16sp"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content" />
        <EditText
            android:textColorHint="@color/textColorHint"
            android:background="@null"
            android:id="@+id/username"
            android:layout_marginLeft="55dp"
            android:textCursorDrawable="@drawable/edit_cursor_color"
            android:textSize="16sp"
            android:hint="@string/user_name_hint"
            android:layout_width="200dp"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <!--下划线-->
    <ImageView
        android:id="@+id/login_diver1"
        android:layout_marginTop="17dp"
        android:layout_gravity="center_horizontal"
        android:background="@color/input_dvier"
        android:layout_width="320dp"
        android:layout_height="1dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:text="@string/user_passwd"
            android:textColor="@color/loginText"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/passwd"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="55dp"
            android:background="@null"
            android:hint="@string/user_passwd_hint"
            android:password="true"
            android:textColorHint="@color/textColorHint"
            android:textCursorDrawable="@drawable/edit_cursor_color"
            android:textSize="16sp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/login_diver2"
        android:layout_marginTop="17dp"
        android:layout_gravity="center_horizontal"
        android:background="@color/input_dvier"
        android:layout_width="320dp"
        android:layout_height="1dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/login_reg"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="30dp"
            android:textSize="17dp"
            android:text="@string/register"
            android:textColor="@color/massageLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
   <LinearLayout
       android:layout_marginTop="40dp"
       android:gravity="center_horizontal"
       android:layout_width="match_parent"
       android:layout_height="wrap_content">
       <!--登录按钮-->
       <Button
           android:textSize="16sp"
           android:id="@+id/login"
           android:layout_width="321dp"
           android:layout_height="48dp"
           android:background="@drawable/login_button_shape"
           android:text="@string/login"
           android:textColor="@color/loginButtonText" />
   </LinearLayout>
    <LinearLayout
        android:divider="@drawable/login_dvier"
        android:showDividers="middle"
        android:gravity="center_horizontal"
        android:layout_marginTop="275dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
             android:paddingHorizontal="10dp"
            android:textColor="@color/massageLogin"
            android:textSize="14dp"
            android:text="@string/bottom_login1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:paddingHorizontal="10dp"
            android:textColor="@color/massageLogin"
            android:textSize="14dp"
            android:text="@string/bottom_login2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:paddingHorizontal="10dp"
            android:textColor="@color/massageLogin"
            android:textSize="14dp"
            android:text="@string/bottom_login3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>
